Made major changes to all containers to fit misplaced pictures and fix the footer. Also made adjustments to size of pictures due to improper spacing in-between the text and container.

--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,6 @@
 .hero{
   background : #00AAB2;
   background : rgba(0, 170, 178, 1);
-  width : 1440px;
   height : 460px;
 }
 
@@ -11,7 +10,7 @@
 .hero-illustration {
 	margin-top: 10px;
 	padding-top: 20px;
-	padding-left: 30px;
+	padding-left: 50px;
 }
 
 .logo-search {
@@ -85,6 +84,7 @@
 	float: left;
 	margin-top: 100px;
 	margin-bottom: 15px;
+	margin-left: -20px;
 }
 
 .track-icon {
@@ -105,7 +105,6 @@
 .alt-foods {
 	background : #00AAB2;
  	background : rgba(0, 170, 178, 1);
-    width : 1440px;
     height : 525px;
 }
 
@@ -122,7 +121,6 @@
 }
 
 .alt-foods-header {
-	width: 400px;
 	padding-top: 5px;
 	margin-bottom: 10px;
 	color: #FFFFFF;
@@ -141,11 +139,20 @@
 	position: relative;
 }
 
+.connection-icon {
+	margin-bottom: 10px;
+	margin-top: 21%;
+}
+
+.connection-p {
+	margin-top: -5px;
+	width: 250px;
+}
+
 /* Custom Meals */
 .custom-meals {
   background : #00AAB2;
   background : rgba(0, 170, 178, 1);
-  width : 1440px;
   height : 796px;
 }
 
@@ -161,6 +168,18 @@
 	margin-top: 70px;
 	width : 310px;
   	height : 251px;
+}
+
+.custom-meals-icon {
+	margin-bottom: 10px;
+}
+
+.custom-meals-h3 {
+	margin-bottom: 10px;
+}
+
+.custom-meals-p {
+	width: 270px;
 }
 
 /* Pricing */
@@ -289,15 +308,17 @@
 
 
 /* Footer */
+
 .footer-nav {
 	background-color: #00aab2;
-	width : 1440px;
- 	height : 197px;
 }
 
 
 .footer-links {
-	float: right;
+	position: relative;
+	margin-top: -10%;
+	margin-left: 40%;
+
 }
 
 .footer-links li {
@@ -314,7 +335,7 @@
 }
 
 .footer-logo {
-	margin-top: 30px;
+	margin-top: 5%;
 }
 
 .copyright-info {
@@ -323,5 +344,7 @@
 
 .footer-btn {
 	float: right;
+	margin-top: -12%;
+	width: 230px;
 
 }
